2005-12-17  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed and landed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5768
          pages with frames that are all "fixed" get no layout and are blank (like www.farnell.nl)

        * khtml/rendering/render_frames.cpp: (RenderFrameSet::layout):
        * manual-tests/bugzilla-5768.html: Added. Can't seem to get it to work (fail) as an automated test.
        * manual-tests/resources/frame1.html: Added.
        * manual-tests/resources/frame2.html: Added.

2005-12-17  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - Fix <http://bugzilla.opendarwin.org/show_bug.cgi?id=6120>
        Random crashes when running the test suite
        
        * khtml/css/css_ruleimpl.h:
        (DOM::CSSMediaRuleImpl::media):
        Make m_lstMedia a smart pointer.

2005-12-17  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed and landed by Darin.

        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=5479
          Can't select text with RTL override rendered by ATSUI

        * khtml/rendering/font.h: Remove reversed parameter from checkSelectionPoint, replacing
        it with a text direction parameter.
        * khtml/rendering/render_text.cpp: (InlineTextBox::offsetForPosition): Ditto.
        * kwq/KWQFontMetrics.h: Add a directional override parameter to checkSelectionPoint.
        * kwq/KWQFontMetrics.mm: (QFontMetrics::checkSelectionPoint): Pass the directional override
        through to the text renderer. Don't pass the reversed flag redundantly -- use the rtl flag
        in the style instead.
        * kwq/WebCoreTextRenderer.h: Remove reversed parameter from pointToOffset.

2005-12-16  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin.

        DOMString should hold its impl in a RefPtr
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6106
        I also cleaned up spacing in dom_string.cpp